--- a/index.html
+++ b/index.html
@@ -34,34 +34,34 @@
             language: (navigator.browserLanguage || navigator.language).toLowerCase()
         }
         // 根据不同的终端，跳转到不同的地址
-        var theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+        var theUrl = 'https://testflight.apple.com/join/DnWVo0gL';
         if (Terminal.platform.android) {//安卓端
-            _czc.push(['_trackEvent', '简听', '下载', 'Android']);
+            _czc.push(['_trackEvent', '广发众测', '下载', 'Android']);
             document.write('“简听”安卓版APP开发中，敬请期待！');
-            //theUrl = 'https://itunes.apple.com/app/id1247266869';
-            //location.href = theUrl;
+            theUrl = 'https://betafile.beetest.com.cn/appstore/cgbtest.apk';
+            location.href = theUrl;
         } else {
             if (Terminal.platform.iPhone) {//iPhone端
-                _czc.push(['_trackEvent', '简听', '下载', 'iPhone']);
-                theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+                _czc.push(['_trackEvent', '广发众测', '下载', 'iPhone']);
+                theUrl = 'https://testflight.apple.com/join/DnWVo0gL';
             } else if (Terminal.platform.iPad) {//iPad端
-                _czc.push(['_trackEvent', '简听', '下载', 'iPad']);
+                _czc.push(['_trackEvent', '广发众测', '下载', 'iPad']);
                 // 还可以通过language，区分开多国语言版
                 switch (Terminal.language) {
                     case 'en-us'://iPad英文版APP Store地址
-                        theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+                        theUrl = 'https://testflight.apple.com/join/DnWVo0gL';
                         break;
                     case 'ko-kr'://iPad韩语版APP Store地址
-                        theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+                        theUrl = 'https://testflight.apple.com/join/DnWVo0gL';
                         break;
                     case 'ja-jp'://iPad日文版APP Store地址
-                        theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+                        theUrl = 'https://testflight.apple.com/join/DnWVo0gL';
                         break;
                     default://iPad默认APP Store地址
-                        theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+                        theUrl = 'https://testflight.apple.com/join/DnWVo0gL';
                 }
             } else {
-                _czc.push(['_trackEvent', '简听', '下载', 'Other']);
+                _czc.push(['_trackEvent', '广发众测', '下载', 'Other']);
             }
             location.href = theUrl;
         }
