--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>简听 - 懒人听网页听小说的神器</title>
+    <title>广发众测APP</title>
 </head>
 
 <body>
@@ -37,7 +37,7 @@
         var theUrl = 'https://testflight.apple.com/join/DnWVo0gL';
         if (Terminal.platform.android) {//安卓端
             _czc.push(['_trackEvent', '广发众测', '下载', 'Android']);
-            document.write('“简听”安卓版APP开发中，敬请期待！');
+           // document.write('“简听”安卓版APP开发中，敬请期待！');
             theUrl = 'https://betafile.beetest.com.cn/appstore/cgbtest.apk';
             location.href = theUrl;
         } else {
