--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             language: (navigator.browserLanguage || navigator.language).toLowerCase()
         }
         // 根据不同的终端，跳转到不同的地址
-        var theUrl = 'https://testflight.apple.com/join/DnWVo0gL';
+        var theUrl = 'https://betafile.beetest.com.cn/appstore/cgbtest.apk';
         if (Terminal.platform.android) {//安卓端
             _czc.push(['_trackEvent', '广发众测', '下载', 'Android']);
            // document.write('“简听”安卓版APP开发中，敬请期待！');
