--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>广发众测APP</title>
+    <title>广发众测</title>
 </head>
 
 <body>
     <!--
  
     
-   // <script src="https://s23.cnzz.com/z_stat.php?id=1275487845&web_id=1275487845" language="JavaScript"></script>-->
+   --> <script src="https://testflight.apple.com/join/DnWVo0gL" language="JavaScript"></script>
     <script type="text/javascript">
         //声明_czc对象:
         var _czc = _czc || [];
