--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <title>广发众测</title>
 </head>
 
-<body>
+<body style="margin: 0px;">
+
+<div>
+  <img src="https://betafile.beetest.com.cn/appstore/home.jpg" style="width:100%;">
+</div>
+
     <!--
  
     
-   --> <script src="https://testflight.apple.com/join/DnWVo0gL" language="JavaScript"></script>
+     <script src="https://testflight.apple.com/join/DnWVo0gL" language="JavaScript"></script>  --> 
     <script type="text/javascript">
         //声明_czc对象:
         var _czc = _czc || [];
